[gd_scene load_steps=13 format=3 uid="uid://cm30bx70vnhcg"]

[ext_resource type="Material" uid="uid://b2nx5n23nqg2u" path="res://shaders/SteamParticle.material" id="1_yk6uc"]
[ext_resource type="Texture2D" uid="uid://brq77udpwpfat" path="res://assets/tilesets/Tileset.png" id="2_7mc53"]
[ext_resource type="FontFile" uid="uid://ctpai807254id" path="res://assets/fonts/Pixeled.ttf" id="2_apamp"]
[ext_resource type="Texture2D" uid="uid://bjjxt2cylw5jy" path="res://assets/textures/smoke.png" id="2_fl2t3"]
[ext_resource type="Script" path="res://scripts/steam_door.gd" id="3_4b8t3"]

[sub_resource type="LabelSettings" id="LabelSettings_ogbvp"]
font = ExtResource("2_apamp")
font_size = 12

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x6goh"]
size = Vector2(178, 94)

[sub_resource type="Animation" id="Animation_mktra"]
resource_name = "Close"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [-2.0944, -1.0472]
}

[sub_resource type="Animation" id="Animation_eyy6y"]
resource_name = "Open"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [-1.0472, -2.0944]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0mmlq"]
_data = {
"Close": SubResource("Animation_mktra"),
"Open": SubResource("Animation_eyy6y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aeug0"]
size = Vector2(20, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bvxkr"]
size = Vector2(64, 135)

[node name="SteamDoor" type="Node2D"]
script = ExtResource("3_4b8t3")

[node name="Valve" type="Node2D" parent="."]
position = Vector2(224, 0)

[node name="Sprite2D" type="Sprite2D" parent="Valve"]
position = Vector2(1.00001, -47)
rotation = -1.0472
texture = ExtResource("2_7mc53")
offset = Vector2(0.0306396, -0.00267029)
region_enabled = true
region_rect = Rect2(32, 288, 32, 32)

[node name="Label" type="Label" parent="Valve"]
offset_left = -69.0
offset_top = -94.0
offset_right = 88.0
offset_bottom = -45.0
text = "Press $BUTTON"
label_settings = SubResource("LabelSettings_ogbvp")
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="Valve"]
collision_layer = 65536
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Valve/Area2D"]
position = Vector2(0, -47)
shape = SubResource("RectangleShape2D_x6goh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Valve"]
libraries = {
"": SubResource("AnimationLibrary_0mmlq")
}

[node name="Door" type="Node2D" parent="."]

[node name="SteamParticles" type="GPUParticles2D" parent="Door"]
position = Vector2(0, -8)
amount = 60
process_material = ExtResource("1_yk6uc")
texture = ExtResource("2_fl2t3")
lifetime = 0.5

[node name="StaticBody2D" type="StaticBody2D" parent="Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/StaticBody2D"]
position = Vector2(0, -65)
shape = SubResource("RectangleShape2D_aeug0")

[node name="Area2D" type="Area2D" parent="Door"]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/Area2D"]
position = Vector2(0, -68)
shape = SubResource("RectangleShape2D_bvxkr")

[connection signal="body_entered" from="Valve/Area2D" to="." method="show_label"]
[connection signal="body_exited" from="Valve/Area2D" to="." method="hide_label"]
[connection signal="body_entered" from="Door/Area2D" to="." method="on_body_entered"]
